[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Creta/Creta.tres" type="DynamicFont" id=2]
[ext_resource path="res://Placeholders/background.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Creta/Creata DEMO.otf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.203922, 0.141176, 0.74902, 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = -3.0
script = ExtResource( 1 )

[node name="botoes" type="VBoxContainer" parent="."]
margin_left = 505.732
margin_top = 236.822
margin_right = 903.732
margin_bottom = 700.822
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" type="Button" parent="botoes"]
margin_top = 136.0
margin_right = 398.0
margin_bottom = 197.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Novo Jogo"

[node name="ContinueButton" type="Button" parent="botoes"]
margin_top = 201.0
margin_right = 398.0
margin_bottom = 262.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Continuar"

[node name="QuitButton" type="Button" parent="botoes"]
margin_top = 266.0
margin_right = 398.0
margin_bottom = 327.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Sair"

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 691.819, 383.473 )
scale = Vector2( 1.05835, 1.04991 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 417.638
margin_top = 111.418
margin_right = 951.638
margin_bottom = 264.418
custom_fonts/font = SubResource( 2 )
text = "Princesa do Abismo"
align = 1
